Smart_Desk_Light/build/log/idf_py_stdout_output_21004
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\SYSTEM32\cmd.exe /C "cd /D D:\ESP_32\Smart_Desk_Light\build\bootloader\esp-idf\esptool_py && e:\esp_idf\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe E:/esp_idf/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/ESP_32/Smart_Desk_Light/build/bootloader/bootloader.bin"
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj 
ccache E:\esp_idf\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESP_32/Smart_Desk_Light/build/config -ID:/ESP_32/Smart_Desk_Light/main -IE:/esp_idf/esp/v5.5/esp-idf/components/newlib/platform_include -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/config/include -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/config/include/freertos -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/config/riscv/include -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IE:/esp_idf/esp/v5.5/esp-idf/components/freertos/esp_additions/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32c3 -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32c3/. -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32c3/include -IE:/esp_idf/esp/v5.5/esp-idf/components/heap/include -IE:/esp_idf/esp/v5.5/esp-idf/components/heap/tlsf -IE:/esp_idf/esp/v5.5/esp-idf/components/log/include -IE:/esp_idf/esp/v5.5/esp-idf/components/soc/include -IE:/esp_idf/esp/v5.5/esp-idf/components/soc/esp32c3 -IE:/esp_idf/esp/v5.5/esp-idf/components/soc/esp32c3/include -IE:/esp_idf/esp/v5.5/esp-idf/components/soc/esp32c3/register -IE:/esp_idf/esp/v5.5/esp-idf/components/hal/platform_port/include -IE:/esp_idf/esp/v5.5/esp-idf/components/hal/esp32c3/include -IE:/esp_idf/esp/v5.5/esp-idf/components/hal/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_rom/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_rom/esp32c3/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_rom/esp32c3 -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_common/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_system/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_system/port/soc -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_system/port/include/riscv -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_system/port/include/private -IE:/esp_idf/esp/v5.5/esp-idf/components/riscv/include -ID:/ESP_32/Smart_Desk_Light/components/rtc -IE:/esp_idf/esp/v5.5/esp-idf/components/driver/deprecated -IE:/esp_idf/esp/v5.5/esp-idf/components/driver/i2c/include -IE:/esp_idf/esp/v5.5/esp-idf/components/driver/touch_sensor/include -IE:/esp_idf/esp/v5.5/esp-idf/components/driver/twai/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_pm/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_ringbuf/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_gpio/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_pcnt/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_gptimer/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_spi/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_mcpwm/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_ana_cmpr/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_i2s/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_sdmmc/include -IE:/esp_idf/esp/v5.5/esp-idf/components/sdmmc/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_sdspi/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_sdio/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_dac/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_rmt/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_tsens/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_sdm/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_i2c/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_uart/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_ledc/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_parlio/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_usb_serial_jtag/include -IE:/esp_idf/esp/v5.5/esp-idf/components/esp_driver_twai/include -ID:/ESP_32/Smart_Desk_Light/managed_components/espressif__led_strip/include -ID:/ESP_32/Smart_Desk_Light/managed_components/espressif__led_strip/interface -ID:/ESP_32/Smart_Desk_Light/managed_components/nopnop2002__ssd1306 -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=D:/ESP_32/Smart_Desk_Light=. -fmacro-prefix-map=E:/esp_idf/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\blink_example_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/blink_example_main.c.obj -c D:/ESP_32/Smart_Desk_Light/main/blink_example_main.c
D:/ESP_32/Smart_Desk_Light/main/blink_example_main.c:91:22: error: 'font_5x7' defined but not used [-Werror=unused-const-variable=]
   91 | static const uint8_t font_5x7[][5] = {
      |                      ^~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
